deadbeef.pxd


    ctypedef DB_FILE* (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_open_ft)(const char* fname)

    ctypedef void (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_close_ft)(DB_FILE* f)

    ctypedef size_t (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_read_ft)(void* ptr, size_t size, size_t nmemb, DB_FILE* stream)

    ctypedef int (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_seek_ft)(DB_FILE* stream, int64_t offset, int whence)

    ctypedef int64_t (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_tell_ft)(DB_FILE* stream)

    ctypedef void (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_rewind_ft)(DB_FILE* stream)

    ctypedef int64_t (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_getlength_ft)(DB_FILE* stream)

    ctypedef const char* (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_get_content_type_ft)(DB_FILE* stream)

    ctypedef void (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_set_track_ft)(DB_FILE* f, DB_playItem_t* it)

    ctypedef int (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_scandir_selector_ft)(const dirent*)

    ctypedef int (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_scandir_cmp_ft)(const dirent**, const dirent**)

    ctypedef int (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_scandir_ft)(const char* dir, dirent*** namelist, _DB_vfs_t_DB_vfs_t_DB_vfs_s_scandir_selector_ft selector, _DB_vfs_t_DB_vfs_t_DB_vfs_s_scandir_cmp_ft cmp)

    ctypedef const char* (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_get_scheme_for_name_ft)(const char* fname)

    ctypedef uint64_t (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_get_identifier_ft)(DB_FILE* f)

    ctypedef void (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_abort_with_identifier_ft)(uint64_t identifier)

    cdef struct DB_vfs_s:
        DB_plugin_t plugin
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_get_schemes_ft get_schemes
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_is_streaming_ft is_streaming
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_is_container_ft is_container
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_abort_ft abort
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_open_ft open
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_close_ft close
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_read_ft read
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_seek_ft seek
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_tell_ft tell
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_rewind_ft rewind
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_getlength_ft getlength
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_get_content_type_ft get_content_type
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_set_track_ft set_track
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_scandir_ft scandir
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_get_scheme_for_name_ft get_scheme_for_name
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_get_identifier_ft get_identifier
        _DB_vfs_t_DB_vfs_t_DB_vfs_s_abort_with_identifier_ft abort_with_identifier

    ctypedef DB_vfs_s DB_vfs_t

    ctypedef void (*_ddb_dialog_t_ddb_dialog_t_set_param_ft)(const char* key, const char* value)

    ctypedef void (*_ddb_dialog_t_ddb_dialog_t_get_param_ft)(const char* key, char* value, int len, const char* def_)

    ctypedef struct ddb_dialog_t:
        const char* title
        const char* layout
        _ddb_dialog_t_ddb_dialog_t_set_param_ft set_param
        _ddb_dialog_t_ddb_dialog_t_get_param_ft get_param
        void* parent

    cpdef enum:
        ddb_button_ok
        ddb_button_cancel
        ddb_button_close
        ddb_button_apply
        ddb_button_yes
        ddb_button_no
        ddb_button_max

    ctypedef int (*_DB_gui_t_DB_gui_t_DB_gui_s_run_dialog_callback_ft)(int button, void* ctx)

    ctypedef int (*_DB_gui_t_DB_gui_t_DB_gui_s_run_dialog_ft)(ddb_dialog_t* dlg, uint32_t buttons, _DB_gui_t_DB_gui_t_DB_gui_s_run_dialog_callback_ft callback, void* ctx)

    cdef struct DB_gui_s:
        DB_plugin_t plugin
        _DB_gui_t_DB_gui_t_DB_gui_s_run_dialog_ft run_dialog

    ctypedef DB_gui_s DB_gui_t

    ctypedef int (*_DB_playlist_t_DB_playlist_t_DB_playlist_s_load_cb_ft)(DB_playItem_t* it, void* data)

    ctypedef DB_playItem_t* (*_DB_playlist_t_DB_playlist_t_DB_playlist_s_load_ft)(ddb_playlist_t* plt, DB_playItem_t* after, const char* fname, int* pabort, _DB_playlist_t_DB_playlist_t_DB_playlist_s_load_cb_ft cb, void* user_data)

    ctypedef int (*_DB_playlist_t_DB_playlist_t_DB_playlist_s_save_ft)(ddb_playlist_t* plt, const char* fname, DB_playItem_t* first, DB_playItem_t* last)

    ctypedef DB_playItem_t* (*_DB_playlist_t_DB_playlist_t_DB_playlist_s_load2_ft)(int visibility, ddb_playlist_t* plt, DB_playItem_t* after, const char* fname, int* pabort)

    cdef struct DB_playlist_s:
        DB_plugin_t plugin
        _DB_playlist_t_DB_playlist_t_DB_playlist_s_load_ft load
        _DB_playlist_t_DB_playlist_t_DB_playlist_s_save_ft save
        const char** extensions
        _DB_playlist_t_DB_playlist_t_DB_playlist_s_load2_ft load2

    ctypedef DB_playlist_s DB_playlist_t

    ctypedef enum ddb_mediasource_event_type_t:
        DDB_MEDIASOURCE_EVENT_CONTENT_DID_CHANGE
        DDB_MEDIASOURCE_EVENT_STATE_DID_CHANGE
        DDB_MEDIASOURCE_EVENT_ENABLED_DID_CHANGE
        DDB_MEDIASOURCE_EVENT_OUT_OF_SYNC

    ctypedef enum ddb_mediasource_state_t:
        DDB_MEDIASOURCE_STATE_IDLE
        DDB_MEDIASOURCE_STATE_LOADING
        DDB_MEDIASOURCE_STATE_SCANNING
        DDB_MEDIASOURCE_STATE_INDEXING
        DDB_MEDIASOURCE_STATE_SAVING

    ctypedef void (*ddb_medialib_listener_t)(ddb_mediasource_event_type_t event, void* user_data)

    cdef struct ddb_mediasource_source_t

    cdef struct ddb_mediasource_api_s #### CUST

    ctypedef ddb_mediasource_api_s ddb_mediasource_api_t

    cdef struct ddb_medialib_item_s #### CUST

    ctypedef ddb_medialib_item_s ddb_medialib_item_t

    ctypedef ddb_mediasource_api_t* (*_DB_mediasource_t_DB_mediasource_t_get_extended_api_ft)()

    ctypedef const char* (*_DB_mediasource_t_DB_mediasource_t_source_name_ft)()

    ctypedef ddb_mediasource_source_t* (*_DB_mediasource_t_DB_mediasource_t_create_source_ft)(const char* source_path)

    ctypedef void (*_DB_mediasource_t_DB_mediasource_t_free_source_ft)(ddb_mediasource_source_t* source)

    ctypedef void (*_DB_mediasource_t_DB_mediasource_t_set_source_enabled_ft)(ddb_mediasource_source_t* source, int enabled)

    ctypedef int (*_DB_mediasource_t_DB_mediasource_t_is_source_enabled_ft)(ddb_mediasource_source_t* source)

    ctypedef void (*_DB_mediasource_t_DB_mediasource_t_refresh_ft)(ddb_mediasource_source_t* source)

    ctypedef int (*_DB_mediasource_t_DB_mediasource_t_add_listener_ft)(ddb_mediasource_source_t* source, ddb_medialib_listener_t listener, void* user_data)

    ctypedef void (*_DB_mediasource_t_DB_mediasource_t_remove_listener_ft)(ddb_mediasource_source_t* source, int listener_id)

    ctypedef ddb_medialib_item_t* (*_DB_mediasource_t_DB_mediasource_t_create_item_tree_ft)(ddb_mediasource_source_t* source, ddb_scriptable_item_t* preset, const char* filter)

    ctypedef void (*_DB_mediasource_t_DB_mediasource_t_free_item_tree_ft)(ddb_mediasource_source_t* source, ddb_medialib_item_t* list)

    ctypedef ddb_mediasource_state_t (*_DB_mediasource_t_DB_mediasource_t_scanner_state_ft)(ddb_mediasource_source_t* source)

    ctypedef ddb_scriptable_item_t* (*_DB_mediasource_t_DB_mediasource_t_get_queries_scriptable_ft)(ddb_mediasource_source_t* source)

    ctypedef ddb_medialib_item_t* (*_DB_mediasource_t_DB_mediasource_t_get_tree_item_parent_ft)(ddb_medialib_item_t* item)

    ctypedef int (*_DB_mediasource_t_DB_mediasource_t_is_tree_item_selected_ft)(ddb_mediasource_source_t* source, const ddb_medialib_item_t* item)

    ctypedef void (*_DB_mediasource_t_DB_mediasource_t_set_tree_item_selected_ft)(ddb_mediasource_source_t* source, const ddb_medialib_item_t* item, int selected)

    ctypedef int (*_DB_mediasource_t_DB_mediasource_t_is_tree_item_expanded_ft)(ddb_mediasource_source_t* source, const ddb_medialib_item_t* item)

    ctypedef void (*_DB_mediasource_t_DB_mediasource_t_set_tree_item_expanded_ft)(ddb_mediasource_source_t* source, const ddb_medialib_item_t* item, int expanded)

    ctypedef const char* (*_DB_mediasource_t_DB_mediasource_t_tree_item_get_text_ft)(const ddb_medialib_item_t* item)

    ctypedef ddb_playItem_t* (*_DB_mediasource_t_DB_mediasource_t_tree_item_get_track_ft)(const ddb_medialib_item_t* item)

    ctypedef const ddb_medialib_item_t* (*_DB_mediasource_t_DB_mediasource_t_tree_item_get_next_ft)(const ddb_medialib_item_t* item)

    ctypedef const ddb_medialib_item_t* (*_DB_mediasource_t_DB_mediasource_t_tree_item_get_children_ft)(const ddb_medialib_item_t* item)

    ctypedef int (*_DB_mediasource_t_DB_mediasource_t_tree_item_get_children_count_ft)(const ddb_medialib_item_t* item)

    ctypedef struct DB_mediasource_t:
        DB_plugin_t plugin
        _DB_mediasource_t_DB_mediasource_t_get_extended_api_ft get_extended_api
        _DB_mediasource_t_DB_mediasource_t_source_name_ft source_name
        _DB_mediasource_t_DB_mediasource_t_create_source_ft create_source
        _DB_mediasource_t_DB_mediasource_t_free_source_ft free_source
        _DB_mediasource_t_DB_mediasource_t_set_source_enabled_ft set_source_enabled
        _DB_mediasource_t_DB_mediasource_t_is_source_enabled_ft is_source_enabled
        _DB_mediasource_t_DB_mediasource_t_refresh_ft refresh
        _DB_mediasource_t_DB_mediasource_t_add_listener_ft add_listener
        _DB_mediasource_t_DB_mediasource_t_remove_listener_ft remove_listener
        _DB_mediasource_t_DB_mediasource_t_create_item_tree_ft create_item_tree
        _DB_mediasource_t_DB_mediasource_t_free_item_tree_ft free_item_tree
        _DB_mediasource_t_DB_mediasource_t_scanner_state_ft scanner_state
        _DB_mediasource_t_DB_mediasource_t_get_queries_scriptable_ft get_queries_scriptable
        _DB_mediasource_t_DB_mediasource_t_get_tree_item_parent_ft get_tree_item_parent
        _DB_mediasource_t_DB_mediasource_t_is_tree_item_selected_ft is_tree_item_selected
        _DB_mediasource_t_DB_mediasource_t_set_tree_item_selected_ft set_tree_item_selected
        _DB_mediasource_t_DB_mediasource_t_is_tree_item_expanded_ft is_tree_item_expanded
        _DB_mediasource_t_DB_mediasource_t_set_tree_item_expanded_ft set_tree_item_expanded
        _DB_mediasource_t_DB_mediasource_t_tree_item_get_text_ft tree_item_get_text
        _DB_mediasource_t_DB_mediasource_t_tree_item_get_track_ft tree_item_get_track
        _DB_mediasource_t_DB_mediasource_t_tree_item_get_next_ft tree_item_get_next
        _DB_mediasource_t_DB_mediasource_t_tree_item_get_children_ft tree_item_get_children
        _DB_mediasource_t_DB_mediasource_t_tree_item_get_children_count_ft tree_item_get_children_count
